--- a/lesson24_homework_html/src/main/webapp/login.css
+++ b/lesson24_homework_html/src/main/webapp/login.css
@@ -1,19 +1,17 @@
-div {
-
+* {
+    outline: none;
 }
 .parentDiv {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+
 }
 .LoginPasswordForm {
-    border: solid 1px;
     background: rgb(34,193,195);
     background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(45,253,90,1) 100%);
-    opacity: 80%;
     padding: 20px;
-    display: flex;
     flex-direction: column;
     border-radius: 45px;
     padding-bottom: 50px;
@@ -21,7 +19,6 @@ div {
 .loginDiv {
     background: rgb(63,94,251);
     background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(70,171,252,1) 100%);
-    border: solid 1px;
     display: flex;
     width: 300px;
     height: 100px;
@@ -45,7 +42,6 @@ div {
 .passwordDiv {
     background: rgb(63,94,251);
     background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(70,171,252,1) 100%);
-    border: solid 1px;
     border-radius: 30px;
     display: flex;
     width: 300px;
@@ -77,14 +73,28 @@ button {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 input {
+    user-focus: none;
+    outline: none;
     width: 280px;
     height: 35px;
     margin: 2px;
     text-align: center;
     border-radius: 20px;
     font-size: 20px;
-
 }
 label {
     font-size: 25px;
 }
+a {
+    display: inline-block;
+    width: 100%;
+    height: 50px;
+    border-radius: 20px;
+    font-size: 20px;
+    background: white;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+/*
+#registrationButton {
+    margin-top: 10px;
+}*/
