Lesson 25 homework bootstrap added js table generation on html page  with all users

--- a/lesson25_homework_bootstrap/src/main/webapp/picture.css
+++ b/lesson25_homework_bootstrap/src/main/webapp/picture.css
@@ -9,3 +9,7 @@
     background-size: contain;
     background-repeat: no-repeat ;
 }
+.btn-dark {
+    font-size: 20px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
