--- a/lesson37_classwork_spring_data_jpa/src/main/resources/templates/user.html
+++ b/lesson37_classwork_spring_data_jpa/src/main/resources/templates/user.html
@@ -7,8 +7,11 @@
 <body>
 Hello from Thymeleaf user html
 <!--Get field from model object attribute-->
+<div th:text="'User from Java'"></div>
 <div th:text="${user.getName}"></div>
-<!--Get static field from model object attribute-->
-<div th:text="${T(by.salov.entity.User).getStaticField()}"></div>
+<div th:text="${user.getAge}"></div>
+<div th:text="${user.Birthday}"></div>
+<!--Get static field from model object attribute
+<div th:text="${T(by.salov.entity.User).getStaticField()}"></div>-->
 </body>
 </html>
