Lesson 37 spring data jpa

--- a/lesson37_classwork_spring_data_jpa/src/main/resources/templates/user.html
+++ b/lesson37_classwork_spring_data_jpa/src/main/resources/templates/user.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>User</title>
 </head>
 <body>
-Hello from Thymeleaf user html
-<!--Get field from model object attribute-->
-<div th:text="'User from Java'"></div>
-<div th:text="${user.getName}"></div>
-<div th:text="${user.getAge}"></div>
-<div th:text="${user.Birthday}"></div>
-<!--Get static field from model object attribute
-<div th:text="${T(by.salov.entity.User).getStaticField()}"></div>-->
+<!-- | | Insert variables in text -->
+<div th:text="|User with name: ${userFromDB.getName}|"></div>
+<div th:text="${userFromDB.getName}"></div>
+<div th:text="${userFromDB.getAge}"></div>
+<div th:text="${userFromDB.Birthday}"></div>
+Get static field from model object attribute
+<div th:text="${T(by.salov.entity.UserDTO).getStaticField()}"></div>
 </body>
 </html>
