--- a/spring_security/src/main/resources/templates/login.html
+++ b/spring_security/src/main/resources/templates/login.html
@@ -5,6 +5,10 @@
 <body>
 <div>
 <!--    <div th:text="|${title}|"></div>-->
+    <!-- user and pass - parameter names from post
+        this parameters will be post on spring securiry
+        /perform-login - end point of spring securiry login
+    -->
     <form name="f" th:action="@{/perform-login}" method="post">
         <fieldset>
             <legend>Войдите</legend>
@@ -22,6 +26,11 @@
                 <button type="submit" class="btn">Войти</button>
             </div>
         </fieldset>
+    </form>
+    <form th:action="@{/logout}" method="post">
+        <div>
+            <input type="submit" value="Logout" />
+        </div>
     </form>
 </div>
 </body>
