Lesson 44 Classwork SpringSecurity

--- a/spring_security/src/main/resources/templates/login.html
+++ b/spring_security/src/main/resources/templates/login.html
@@ -16,6 +16,10 @@
             <input type="text" id="user" name="user"/>
             <label for="pass">Пароль</label>
             <input type="password" id="pass" name="pass"/>
+            <input type="checkbox" id="remember" name="remember-me">
+            <label for="remember">
+                Remember Me
+            </label>
             <div class="form-actions">
                 <button type="submit" class="btn">Войти</button>
             </div>
