Lesson 44 Classwork SpringSecurity

--- a/spring_security/src/main/resources/templates/login.html
+++ b/spring_security/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 <body>
 <div>
 <!--    <div th:text="|${title}|"></div>-->
-    <!-- user and pass - parameter names from post
+    <!-- user,pass, remember-me - parameter names from post
         this parameters will be post on spring securiry
         /perform-login - end point of spring securiry login
     -->
