--- a/lesson45_spring_security_roles/src/main/resources/templates/login.html
+++ b/lesson45_spring_security_roles/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="wrapper">
-    <div id="hello"> Hello from login</div>
+    <div class="hello"> Hello from login</div>
     <form name="loginForm" th:action="@{/perform-login}" method="post">
         <fieldset>
             <legend> Введите имя и пароль</legend>
