--- a/lesson45_spring_security_roles/src/main/resources/templates/logout.html
+++ b/lesson45_spring_security_roles/src/main/resources/templates/logout.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="wrapper">
-    <div id="hello"> Hello from logout</div>
+    <div class="hello"> Hello from logout</div>
     <form th:action="@{/logout}" method="post">
         <button type="submit" value="Logout" id="logoutButton">
             Logout
