--- a/lesson45_spring_security_roles/src/main/resources/templates/user.html
+++ b/lesson45_spring_security_roles/src/main/resources/templates/user.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="wrapper">
-    <div id="hello"> Hello from user </div>
+    <div class="hello"> Hello from user </div>
 </div>
 </body>
 </html>
